[project]
name = "agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-core (>=1.3.3,<2.0.0)",
    "pyjwt (>=2.12.1,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "langgraph (>=1.1.10,<2.0.0)",
    "yt-dlp[default] (>=2026.3.17,<2027.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
